# MOSAIC-Combat-Evolved

./: .env.example  .gitignore  LICENSE  README.md  mkdocs.yml  mosaic-tsplan.md  pyproject.toml
docs/: autoresearch-macro-plan.md  claim_extraction_guidelines.md  compliance_policy.md  confidence_policy.md  macro-agent-data-source-plan.md  macro_agent_role_contracts.md  master_plan_v1_1.md  mirofish-offline-replacement-plan.md  prompt-asset-protection-plan.md  prompt-leak-audit.md  rke_phase_minus_1_plan.md  rke_report_intelligence_architecture.md  validation_policy.md
mosaic/: cache_manager.py  default_config.py
mosaic-ts/: README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts
schemas/: active_prompt_release_manifest_v1.schema.json  agent_outcome_contract_manifest_v2.schema.json  agent_prompt_role_contract_manifest_v2.schema.json  agent_snapshot_bundle_v1.schema.json  agent_tool_contract_manifest_v1.schema.json  commodity_conditions_v1.schema.json  confidence_policy.schema.yaml  data_availability_matrix.schema.json  domain_evaluation_preregistration_v1.schema.json  domain_evaluation_result_v1.schema.json  domain_evaluation_sample_manifest_v1.schema.json  domain_knob_catalog_v1.schema.json  domain_knob_evaluation_contract_v1.schema.json  domain_knob_values_v1.schema.json  domain_promotion_decision_v1.schema.json  economic_calendar_event_v2.schema.json  evaluation_opportunity_projection_v2.schema.json  evidence_claim_graph_v1.schema.json  execution_behavior_release_manifest_v1.schema.json  geopolitical_initial_source_manifest_v2.schema.json  geopolitical_source_transport_preflight_v1.schema.json  hypothesis.schema.json  knot_runtime_contract_manifest_v2.schema.json  knot_runtime_contract_ref_v2.schema.json  macro_role_snapshot_v1.schema.json  (+84 more)
(+913 files in other folders)
